big updates about code syntax